<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculationActivity" >

    <TextView
        android:id="@+id/tv_enter_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="29dp"
        android:text="@string/enter_total_amount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/tv_enter_total_amount"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/Brown" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_enter_tip_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/enter_tip_percent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_enter_tip_percent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:showDividers="beginning|middle|end" >

        <Button
            android:id="@+id/bt_10_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Sandy"
            android:text="@string/ten_percent"
            android:textColor="@color/Brown" />

        <Button
            android:id="@+id/bt_15_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Sandy"
            android:text="@string/fifteen_percent"
            android:textColor="@color/Brown" />

        <Button
            android:id="@+id/bt_20_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Sandy"
            android:text="@string/twenty_percent"
            android:textColor="@color/Brown" />

        <Button
            android:id="@+id/bt_other_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Sandy"
            android:text="@string/other_percent"
            android:textColor="@color/Brown" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_amount_to_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/amount_to_tip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Orange"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tv_tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_amount_to_tip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Brown" />

</RelativeLayout>